added labels and styled them

--- a/index.html
+++ b/index.html
@@ -115,8 +115,12 @@
               </p>
               <div class="tool-card-acctions">
                 <div class="tool-input-acctions">
-                  <input type="checkbox" class="tool-checkbox" />
-                  <input type="checkbox" class="tool-checkbox" />
+                  <label for="input" class="tool-acction"
+                    ><input type="checkbox" class="tool-checkbox"
+                  /></label>
+                  <label for="input" class="tool-acction">
+                    <input type="checkbox" class="tool-checkbox" />
+                  </label>
                 </div>
                 <a class="tool-link" href="https://www.figma.com/">Visit</a>
               </div>
@@ -139,8 +143,12 @@
               </p>
               <div class="tool-card-acctions">
                 <div class="tool-input-acctions">
-                  <input type="checkbox" class="tool-checkbox" />
-                  <input type="checkbox" class="tool-checkbox" />
+                  <label for="input" class="tool-acction"
+                    ><input type="checkbox" class="tool-checkbox"
+                  /></label>
+                  <label for="input" class="tool-acction">
+                    <input type="checkbox" class="tool-checkbox" />
+                  </label>
                 </div>
                 <a class="tool-link" href="https://www.sketch.com/">Visit</a>
               </div>
@@ -164,8 +172,12 @@
               </p>
               <div class="tool-card-acctions">
                 <div class="tool-input-acctions">
-                  <input type="checkbox" class="tool-checkbox" />
-                  <input type="checkbox" class="tool-checkbox" />
+                  <label for="input" class="tool-acction"
+                    ><input type="checkbox" class="tool-checkbox"
+                  /></label>
+                  <label for="input" class="tool-acction">
+                    <input type="checkbox" class="tool-checkbox" />
+                  </label>
                 </div>
                 <a class="tool-link" href="https://code.visualstudio.com/"
                   >Visit</a
@@ -191,8 +203,12 @@
               </p>
               <div class="tool-card-acctions">
                 <div class="tool-input-acctions">
-                  <input type="checkbox" class="tool-checkbox" />
-                  <input type="checkbox" class="tool-checkbox" />
+                  <label for="input" class="tool-acction"
+                    ><input type="checkbox" class="tool-checkbox"
+                  /></label>
+                  <label for="input" class="tool-acction">
+                    <input type="checkbox" class="tool-checkbox" />
+                  </label>
                 </div>
                 <a class="tool-link" href="https://www.notion.so/">Visit</a>
               </div>
@@ -216,8 +232,12 @@
               </p>
               <div class="tool-card-acctions">
                 <div class="tool-input-acctions">
-                  <input type="checkbox" class="tool-checkbox" />
-                  <input type="checkbox" class="tool-checkbox" />
+                  <label for="input" class="tool-acction"
+                    ><input type="checkbox" class="tool-checkbox"
+                  /></label>
+                  <label for="input" class="tool-acction">
+                    <input type="checkbox" class="tool-checkbox" />
+                  </label>
                 </div>
                 <a class="tool-link" href="https://slack.com/">Visit</a>
               </div>
@@ -241,8 +261,12 @@
               </p>
               <div class="tool-card-acctions">
                 <div class="tool-input-acctions">
-                  <input type="checkbox" class="tool-checkbox" />
-                  <input type="checkbox" class="tool-checkbox" />
+                  <label for="input" class="tool-acction"
+                    ><input type="checkbox" class="tool-checkbox"
+                  /></label>
+                  <label for="input" class="tool-acction">
+                    <input type="checkbox" class="tool-checkbox" />
+                  </label>
                 </div>
                 <a class="tool-link" href="https://www.invisionapp.com/"
                   >Visit</a
@@ -260,32 +284,37 @@
           <h2 class="brands-title">Trusted more than 150+ brand</h2>
           <div class="brands-photo">
             <div class="brand-photo">
-              <img
-                src="./src/img/icon/microsoft.svg"
-                alt="microsoft"
-                class="brand-img"
-              />
+              <a href="https://www.microsoft.com/uk-ua" class="brand-link"
+                ><img
+                  src="./src/img/icon/microsoft.svg"
+                  alt="microsoft"
+                  class="brand-img"
+              /></a>
             </div>
             <div class="brand-photo">
-              <img
-                src="./src/img/icon/google.svg"
-                alt="google"
-                class="brand-img"
-              />
+              <a href="https://www.google.com.ua/?hl=ua" class="brand-link"
+                ><img
+                  src="./src/img/icon/google.svg"
+                  alt="google"
+                  class="brand-img"
+              /></a>
             </div>
             <div class="brand-photo">
-              <img
-                src="./src/img/icon/slack.svg"
-                alt="slack"
-                class="brand-img"
-              />
+              <a href="https://slack.com/" class="brand-link">
+                <img
+                  src="./src/img/icon/slack.svg"
+                  alt="slack"
+                  class="brand-img"
+              /></a>
             </div>
             <div class="brand-photo">
-              <img
-                src="./src/img/icon/wordpress.svg"
-                alt="wordpress"
-                class="brand-img"
-              />
+              <a href="https://wordpress.com/ru/" class="brand-link">
+                <img
+                  src="./src/img/icon/wordpress.svg"
+                  alt="wordpress"
+                  class="brand-img"
+                />
+              </a>
             </div>
           </div>
         </div>
@@ -317,8 +346,12 @@
               </p>
               <div class="app-card-acctions">
                 <div class="input-acctions">
-                  <input type="checkbox" class="app-checkbox" />
-                  <input type="checkbox" class="app-checkbox" />
+                  <label for="input" class="app-label">
+                    <input type="checkbox" class="app-checkbox" />
+                  </label>
+                  <label for="input" class="app-label">
+                    <input type="checkbox" class="app-checkbox" />
+                  </label>
                 </div>
                 <a class="app-link" href="https://zeplin.io/">Visit</a>
               </div>
@@ -339,8 +372,12 @@
               </p>
               <div class="app-card-acctions">
                 <div class="input-acctions">
-                  <input type="checkbox" class="app-checkbox" />
-                  <input type="checkbox" class="app-checkbox" />
+                  <label for="input" class="app-label">
+                    <input type="checkbox" class="app-checkbox" />
+                  </label>
+                  <label for="input" class="app-label">
+                    <input type="checkbox" class="app-checkbox" />
+                  </label>
                 </div>
                 <a
                   class="app-link"
@@ -365,8 +402,12 @@
               </p>
               <div class="app-card-acctions">
                 <div class="input-acctions">
-                  <input type="checkbox" class="app-checkbox" />
-                  <input type="checkbox" class="app-checkbox" />
+                  <label for="input" class="app-label">
+                    <input type="checkbox" class="app-checkbox" />
+                  </label>
+                  <label for="input" class="app-label">
+                    <input type="checkbox" class="app-checkbox" />
+                  </label>
                 </div>
                 <a
                   class="app-link"
@@ -391,8 +432,12 @@
               </p>
               <div class="app-card-acctions">
                 <div class="input-acctions">
-                  <input type="checkbox" class="app-checkbox" />
-                  <input type="checkbox" class="app-checkbox" />
+                  <label for="input" class="app-label">
+                    <input type="checkbox" class="app-checkbox" />
+                  </label>
+                  <label for="input" class="app-label">
+                    <input type="checkbox" class="app-checkbox" />
+                  </label>
                 </div>
                 <a class="app-link" href="https://procreate.com/">Visit</a>
               </div>
