--- a/index.html
+++ b/index.html
@@ -64,32 +64,32 @@
               <button class="form-button">Search</button>
             </form>
           </div>
-          <div class="webnetwork">
-            <div class="webnetwork-photo">
+          <ul class="webnetwork">
+            <li class="webnetwork-item">
               <a href="https://www.facebook.com/" class="webnetwork-link">
                 <img
                   src="./src/img/icon/facebook.svg"
                   alt="facebook"
                   class="webnetwork-img"
               /></a>
-            </div>
-            <div class="webnetwork-photo">
+            </li>
+            <li class="webnetwork-item">
               <a href="https://www.instagram.com/" class="webnetwork-link"
                 ><img
                   src="./src/img/icon/instagram.svg"
                   alt="instagram"
                   class="webnetwork-img"
               /></a>
-            </div>
-            <div class="webnetwork-photo">
+            </li>
+            <li class="webnetwork-item">
               <a href="https://twitter.com/" class="webnetwork-link"
                 ><img
                   src="./src/img/icon/twitter.svg"
                   alt="twitter"
                   class="webnetwork-img"
               /></a>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="tools">
