--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
     <link rel="stylesheet" href="./src/css/reset.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./src/css/style.css" />
     <title>Antools</title>
   </head>
   <body>
     <header class="header">
       <div class="container header-container">
-        <a href="#" class="logo">
+        <a href="#" class="logo" data-aos="fade-down">
           <img src="./src/img/logo/logo.svg" alt="logo" class="logo-img" />
         </a>
-        <nav class="menu">
+        <nav class="menu" data-aos="fade-down">
           <ul class="menu-list">
             <li class="list-item"><a href="#" class="list-link">Home</a></li>
             <li class="list-item">
@@ -35,7 +36,7 @@
             <li class="list-item"><a href="#" class="list-link">Blog</a></li>
           </ul>
         </nav>
-        <div class="header-acction">
+        <div class="header-acction" data-aos="fade-left">
           <button class="button-acction">Login</button>
           <button class="button-acction">Sign up</button>
         </div>
@@ -44,7 +45,7 @@
     <main class="main">
       <section class="hero">
         <div class="container">
-          <div class="hero-info">
+          <div class="hero-info" data-aos="fade-right">
             <h1 class="hero-title">
               Awesome tools for Designer & Developer
               <span class="hero-dot">.</span>
@@ -64,7 +65,7 @@
               <button class="form-button">Search</button>
             </form>
           </div>
-          <ul class="webnetwork">
+          <ul class="webnetwork" data-aos="fade-right">
             <li class="webnetwork-item">
               <a href="https://www.facebook.com/" class="webnetwork-link">
                 <img
@@ -94,14 +95,14 @@
       </section>
       <section class="tools">
         <div class="container tools-container">
-          <h2 class="tools-title">Most Popular Tools</h2>
-          <p class="tools-subtitle">
+          <h2 class="tools-title" data-aos="fade-down">Most Popular Tools</h2>
+          <p class="tools-subtitle" data-aos="fade-down">
             Tools for the best Designers and Developers most popularly used in
             the world
           </p>
           <div class="tools-cards">
             <!-- ======================1====================== -->
-            <article class="tools-card">
+            <article class="tools-card" data-aos="fade-right">
               <div class="tool-icon">
                 <img
                   src="./src/img/icon/figma.svg"
@@ -131,7 +132,7 @@
               </div>
             </article>
             <!-- ======================2====================== -->
-            <article class="tools-card">
+            <article class="tools-card" data-aos="fade-down">
               <div class="tool-icon">
                 <img
                   src="./src/img/icon/sketch.svg"
@@ -165,7 +166,7 @@
               </div>
             </article>
             <!-- ======================3====================== -->
-            <article class="tools-card">
+            <article class="tools-card" data-aos="fade-left">
               <div class="tool-icon">
                 <img
                   src="./src/img/icon/vs.svg"
@@ -202,7 +203,7 @@
               </div>
             </article>
             <!-- ======================4====================== -->
-            <article class="tools-card">
+            <article class="tools-card" data-aos="fade-right">
               <div class="tool-icon">
                 <img
                   src="./src/img/icon/notion.svg"
@@ -237,7 +238,7 @@
               </div>
             </article>
             <!-- ======================5====================== -->
-            <article class="tools-card">
+            <article class="tools-card" data-aos="fade-up">
               <div class="tool-icon">
                 <img
                   src="./src/img/icon/slack-colored.svg"
@@ -268,7 +269,7 @@
               </div>
             </article>
             <!-- ======================6====================== -->
-            <article class="tools-card">
+            <article class="tools-card" data-aos="fade-left">
               <div class="tool-icon">
                 <img
                   src="./src/img/icon/invision.svg"
@@ -306,7 +307,7 @@
             </article>
           </div>
           <div class="tools-button">
-            <button class="tools-link">Load more</button>
+            <button class="tools-link" data-aos="fade-up">Load more</button>
           </div>
         </div>
       </section>
@@ -352,7 +353,7 @@
       </section>
       <section class="newcomer">
         <div class="container newcomer-container">
-          <div class="newcomer-info">
+          <div class="newcomer-info" data-aos="fade-right">
             <h2 class="info-title">Newcomer Tools</h2>
             <p class="info-text">
               Wow! see the latest update of the most recommended tools from
@@ -362,7 +363,7 @@
           </div>
           <div class="newcomer-apps">
             <!-- =======================1==================== -->
-            <article class="apps-card">
+            <article class="apps-card" data-aos="fade-left">
               <div class="app-face">
                 <div class="app-icon">
                   <img
@@ -394,7 +395,7 @@
               </div>
             </article>
             <!-- =======================2==================== -->
-            <article class="apps-card">
+            <article class="apps-card" data-aos="fade-left">
               <div class="app-face">
                 <div class="app-icon">
                   <img
@@ -430,7 +431,7 @@
               </div>
             </article>
             <!-- =======================3==================== -->
-            <article class="apps-card">
+            <article class="apps-card" data-aos="fade-left">
               <div class="app-face">
                 <div class="app-icon">
                   <img
@@ -466,7 +467,7 @@
               </div>
             </article>
             <!-- =======================4==================== -->
-            <article class="apps-card">
+            <article class="apps-card" data-aos="fade-left">
               <div class="app-face">
                 <div class="app-icon">
                   <img
@@ -506,19 +507,19 @@
       </section>
       <section class="teammate">
         <div class="container teammate-container">
-          <div class="teammate-card">
+          <div class="teammate-card" data-aos="fade-right">
             <h2 class="teammate-name">Ronald Richards</h2>
             <p class="teammate-role">Product Manager</p>
           </div>
           <div class="teammate-info">
-            <div class="teammate-photo">
+            <div class="teammate-photo" data-aos="fade-right">
               <img
                 src="./src/img/main/ronald-richards.webp"
                 alt="ronald richards"
                 class="teammate-img"
               />
             </div>
-            <div class="about-teammate">
+            <div class="about-teammate" data-aos="fade-left">
               <p class="teammate-text">
                 Incididunt cillum do sint sint enim ullamco id deserunt mollit
                 qui reprehenderit do. Velit ex tempor cillum ad sint occaecat.
@@ -532,7 +533,7 @@
         </div>
       </section>
       <section class="join">
-        <div class="container join-container">
+        <div class="container join-container" data-aos="fade-up">
           <h2 class="join-title">Become a contributor?</h2>
           <p class="join-text">
             Join us and get tips & tricks to become a great Designer and
@@ -607,5 +608,9 @@
         </div>
       </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
